# OpenChronicle

./: .all-contributorsrc  README.md  install.sh  pyproject.toml
docs/: architecture.md  capture.md  config.md  session.md
example/: .env  .env.example  README.md  env.example  pyproject.toml
example/activity_chronicler/: README.md  __init__.py  chronicler.py  stats.py  synthesizer.py
example/activity_chronicler/prompts/: theme_cluster.md  weekly_recap.md
example/email_task_planner/: README.md  __init__.py  calendar_export.py  extractor.py  planner.py
example/email_task_planner/prompts/: email_task_extract.md
example/handover_assistant/: README.md  __init__.py  builder.py  handover.py
example/handover_assistant/prompts/: handover_doc.md  project_status.md
example/meeting_task_digest/: README.md  __init__.py  digest.py  extractor.py
example/meeting_task_digest/prompts/: meeting_extract.md  task_extract.md
example/recaps/: activity-range-2026-05-09_to_2026-05-09.md
example/shared/: __init__.py  llm_client.py  mcp_client.py  memory_loader.py
src/openchronicle/: cli.py
src/openchronicle/capture/: ax_capture.py  event_dispatcher.py  s1_parser.py  scheduler.py  watcher.py  win_pywinauto_capture.py  win_watcher.py
src/openchronicle/mcp/: server.py
src/openchronicle/prompts/: session_reduce.md  timeline_block.md
src/openchronicle/session/: tick.py
src/openchronicle/store/: entries.py  files.py  fts.py  index_md.py
src/openchronicle/timeline/: aggregator.py
src/openchronicle/writer/: compact.py  llm.py  session_reducer.py
tests/: test_cli_captures_cleanup.py  test_cli_status.py  test_llm_json.py  test_store.py  test_writer_llm_ping.py
