[project]
name = "openchronicle-examples"
version = "0.1.0"
description = "Example apps consuming the OpenChronicle local memory layer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "litellm>=1.52",
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "python-dateutil>=2.9.0",
    "pydantic>=2.7.0",
    "anyio>=4.4.0",
]

[project.scripts]
oc-digest = "meeting_task_digest.digest:app"
oc-handover = "handover_assistant.handover:app"
oc-recap = "activity_chronicler.chronicler:app"
oc-mailtasks = "email_task_planner.planner:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "meeting_task_digest", "handover_assistant", "activity_chronicler", "email_task_planner"]

[tool.ruff]
line-length = 100
target-version = "py310"
